@@ -11,6 +11,7 @@ Revision history for SPVM
         * Improve the messages of class name compilation errors.
         [BUG FIX]
         * Fix the bug that local variable can contain "::".
+        * Fix the bug that the method name of the method definition can contain "::".
         [NON BACKWORD COMPATIBLE CHANGES]
         * Remove "any_object_basic_type_id" native API. ID 155 is reused by "free_env_prepared" native API.
         * Remove "string_basic_type_id" native API. ID 162 is reused by "cleanup_global_vars" native API.
